@@ -13,7 +13,7 @@
 ;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ;  GNU General Public License for more details.
 ;
-;  You should have received a copy of the GNU General Public License 
+;  You should have received a copy of the GNU General Public License
 ;  along with this library; see the file COPYING. If not, write to the
 ;  Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
 ;   MA 02110-1301, USA.
@@ -30,6 +30,7 @@
 
 _Bool atomic_flag_test_and_set(volatile atomic_flag *object) __naked
 {
+  object; // avoid warning 85 unreferenced function argument
 __asm
 	pshx
 	pulh
